--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "App para consumo da API do The Movies DB",
   "main": "index.js",
   "scripts": {
+    "production": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +19,8 @@
   },
   "homepage": "https://github.com/matheusraz/cubos-filmes#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^1.19.1"
   },
